8058475: TestCMSClassUnloadingEnabledHWM.java fails with '.*CMS Initial Mark.*' missing from stdout/stderr
Reviewed-by: mgerdin, tschatzl, brutisso